# jill.py

./: .cirrus.yml  .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README_zh.md  installtest.sh  mirror.example.json  mirror_daemon.py  pyproject.toml  register_mirror.md  requirements.txt  setup.py  sources_format.md  test_mirror.json
.github/workflows/: pythonapp.yml  pythonpublish.yml
jill/: __init__.py  __main__.py  defaults.py  download.py  filters.py  gpg_utils.py  install.py  installer.py  interactive_utils.py  list.py  mirror.py  mount_utils.py  net_utils.py  source.py  sources.json  switch.py  sys_utils.py  version_utils.py
jill/config/: alias.json  mirror.json  placeholders.json  releases.csv  sources.json  versions-schema.json
jill/tests/: tests_alias.py  tests_filters.py  tests_versions.py
jill/utils/: __init__.py  defaults.py  filters.py  gpg_utils.py  interactive_utils.py  mount_utils.py  net_utils.py  source_utils.py  sys_utils.py  version_utils.py
