[tool.poetry]
name = "jill"
version = "0.12.0"
description = "JILL -- Julia Installer for Linux (MacOS, Windows and FreeBSD) -- Light"
authors = ["johnnychen94 <johnnychen94@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/johnnychen94/jill.py"
keywords = ["julia", "installer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "jill" },
]
exclude = [
    "jill/tests"
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.27"
click = "^8.1.7"
semantic-version = "^2.10.0"
python-gnupg = "^0.5.0"
jsonschema = "^4.17.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"

[tool.poetry.scripts]
jill = 'jill.__main__:main'

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
